css/main.css
.container {
    padding-top:60px;
}
.lastfm-top-artists__list {
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    list-style:none;
    padding:0;
}
.lastfm-top-artists__item {
    margin:0 10px 20px;
    position:relative;
    /*width:20%;*/
}
.lastfm-top-artists__link:hover .lastfm-top-artists__name,
.lastfm-top-artists__link:focus .lastfm-top-artists__name {
    opacity:1;
}
.lastfm__img {
    background:#888;
}
.lastfm-top-artists__name,
.artist-placeholder {
    align-items:center;
    background:#000;
    color:#fff;
    display:flex;
    height:174px;
    justify-content:center;
    left:0;
    position:absolute;
    text-align:center;
    transition:opacity .3s linear;
    top:0;
    width:174px;
}
.lastfm-top-artists__name {
    opacity:0;
}
.year {
    display:block;
}

